2009-02-06  John W. Eaton  <jwe@octave.org>

	* Makefile.in (INCLUDES): Include oct-hdf5.h in the list.

	* Makefile.in (oct-gperf.h): Don't use pipeline to process gperf
	output.

2009-02-05  John W. Eaton  <jwe@octave.org>

	* symtab.cc (symbol_table::fcn_info::cn_info_rep::xfind):
	New function.
	(symbol_table::fcn_info::cn_info_rep::find):
	Use it to avoid recursive call.

	* graphics.cc (Fdrawnow): Return after errors.  Don't strip
	trailing directory separator from name used in call to file_stat.

	* DLD-FUNCTIONS/eigs.cc (Feigs): Avoid warnings about ambiguous
	else.  Style fixes.  Return after errors.

2009-02-05  Jaroslav Hajek  <highegg@gmail.com>

	* oct-map.cc (Octave_map::index): Optimize.

2009-02-05  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-cm-cs.cc: Use scalar_value in scalar-to-matrix
	indexed assignments.
	* OPERATORS/op-fcm-fcs.cc: Ditto.
	* OPERATORS/op-fm-fs.cc: Ditto.
	* OPERATORS/op-m-s.cc: Ditto.
	* OPERATORS/op-int.h (OCTAVE_MS_INT_ASSIGN_OPS): Use homogeneous
	integer scalar-to-matrix assignment.
	(OCTAVE_MM_INT_ASSIGN_OPS): Use homogeneous integer matrix-to-matrix
	assignment.

	* Cell.h (Cell::index): Remove direct idx_vector overloads.
	(Cell::assign): Remove direct idx_vector overloads.
	(Cell::delete_elements): Remove direct idx_vector overloads.
	* Cell.cc (Cell::index (const octave_value_list&)): Call
	ArrayN<octave_value>::index.

	* oct-map.h (Octave_map::index): Remove direct idx_vector overloads.
	* oct-map.cc (Octave_map::index): Ditto.
	* ov-base-mat.cc (octave_base_mat::do_index_op): Optimize scalar
	indexing case.
	(octave_base_mat::assign (const octave_value_list&, const MT&)):
	Specialize variable argument number.
	(octave_base_mat::assign (const octave_value_list&, const 
	typename MT::element_type&)):
	New method overload with optimized scalar indexing case.

	* ov-cell.cc (octave_base_matrix<Cell>::do_index_op,
	octave_base_matrix<Cell>::assign,
	octave_base_matrix<Cell>::delete_elements): Specialize.